--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		<div class="row">
 			<div class="col-md-8"><!-- Offers Body -->
       <div class="row">
-		  <div class="col-md-12 adc" style="padding-bottom:10px">
+		  <div class="col-md-12 adc clearfix" style="padding-bottom:10px">
     		<div class="btn-group" data-toggle="buttons">
               <label class="btn btn-default active">
                 <input type="radio" name="options" id="show_all"> All <span id="all_count"></span>
