--- a/index.html
+++ b/index.html
@@ -229,6 +229,14 @@
         		<div class="col-md-4">
         		    <p style="text-align: left;">Copyright © Know Your Offers</p>
             </div>
+            <div id="fb-root"></div>
+            <script>(function(d, s, id) {
+              var js, fjs = d.getElementsByTagName(s)[0];
+              if (d.getElementById(id)) return;
+              js = d.createElement(s); js.id = id;
+              js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId=358070894297602";
+              fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));</script>
           </div>
       	</div>
     </div>
